--- a/package.json
+++ b/package.json
@@ -29,20 +29,21 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
-    "yaml": "^2.3.4",
-    "openai": "^4.20.1",
     "@anthropic-ai/sdk": "^0.9.1",
     "@octokit/rest": "^20.0.2",
-    "glob": "^10.3.10",
-    "fs-extra": "^11.1.1",
     "chalk": "^5.3.0",
-    "ora": "^7.0.1"
+    "commander": "^11.1.0",
+    "dotenv": "^17.2.3",
+    "fs-extra": "^11.1.1",
+    "glob": "^10.3.10",
+    "openai": "^4.20.1",
+    "ora": "^7.0.1",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.8",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
